fixed issue with h1 on mobile

--- a/src/customcss/custom-footy.css
+++ b/src/customcss/custom-footy.css
@@ -6,7 +6,7 @@ body {
 
 h1 {
   font-family: "Permanent Marker", cursive !important;
-  font-size: 3em !important;
+  font-size: 2.5em !important;
 
   color: #fffb82 !important;
   text-shadow: #000 0px 0px 1px !important;
